--- a/mesa/docs/qos/qos.adoc
+++ b/mesa/docs/qos/qos.adoc
@@ -157,16 +157,19 @@ Configuration of OT in `mesa_qos_port_conf_t::ot_queue`
 The scheduler that controls the transmission of all frames from the priority
 queues can be configured in +
 `mesa_qos_port_conf_t::dwrr_enable` +
+`mesa_qos_port_conf_t::dwrr_mode` +
 `mesa_qos_port_conf_t::dwrr_cnt` +
 `mesa_qos_port_queue_conf_t::pct`
 
 .The scheduling can be configured in two different modes:
 * Strict scheduling where all queues are equally prioritized (default).
 * Weighted (DWRR) scheduling where queues are prioritized after a percentual weight.
+* The DWRR scheduling can be either Line Rate based or Frame based.
 
 If MESA capability `MESA_CAP_QOS_OT` is not zero there is a separate scheduler for IT and for OT frame flow. +
 Configuration of IT in +
 `mesa_qos_port_conf_t::dwrr_enable` +
+`mesa_qos_port_conf_t::dwrr_mode` +
 `mesa_qos_port_conf_t::dwrr_cnt` +
 `mesa_qos_port_queue_conf_t::pct`
 
